--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@schedule-x/theme-default": "^2.4.1",
+    "@schedule-x/vue": "^2.3.1",
     "nuxt": "^3.12.4",
     "vue": "latest"
   },
