--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
     "google-auth-library": "^9.15.1",
+    "moment": "^2.30.1",
     "pinia": "2.2",
     "prettier": "^3.5.3",
     "vue": "latest",
