--- a/package.json
+++ b/package.json
@@ -31,11 +31,19 @@
   "devDependencies": {
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/icon": "^1.14.0",
+    "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/eslint-module": "^4.1.0",
+    "@types/jest": "^30.0.0",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^9.28.0",
+    "happy-dom": "^18.0.1",
+    "jest": "^30.1.3",
     "nuxt": "^3.14.0",
+    "playwright-core": "^1.55.0",
+    "ts-jest": "^29.4.4",
     "typescript": "^5.8.3",
     "vite-plugin-vuetify": "^2.1.1",
+    "vitest": "^3.2.4",
     "vuetify": "^3.7.0"
   },
   "overrides": {
