--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pinia": "2.2",
     "prettier": "^3.5.3",
     "vue": "latest",
+    "vue-toast-notification": "^3.1.3",
     "vue3-google-login": "^2.0.33"
   },
   "devDependencies": {
